# openarm_visual_grasping

./: .gitignore  MUJOCO_LOG.TXT  README.md  requirements.txt
eye_hand_calib/: setup.cfg
grasp_control/: package.xml  setup.py
openarm_description/: package.xml  setup.cfg  setup.py
src/eye_hand_calib/: package.xml  setup.py
src/filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/filters/.github/workflows/: ros2_ci.yml
src/filters/include/filters/: filter_base.hpp  filter_chain.hpp  median.hpp
src/filters/test/: test_chain.cpp  test_realtime_circular_buffer.cpp
src/grasp_control/: setup.cfg
src/joint_state_pkg/: package.xml  setup.py
src/joint_state_pkg/joint_state_pkg/: joint_state_subscriber.py
src/mujoco_ros2/: CMakeLists.txt  README.md
src/mujoco_ros2/.github/ISSUE_TEMPLATE/: bug_report.yml
src/mujoco_ros2/include/mujoco_ros2/: mujoco_ros.hpp
src/mujoco_ros2/launch/: example.py
src/mujoco_ros2/model/: two_link_planar.xml
src/mujoco_ros2/src/: mujoco_ros.cpp
src/mujoco_ros2/src/nodes/: mujoco_node.cpp
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_cameras.cpp
src/mujoco_ros2_control/mujoco_ros2_control_demos/: CMakeLists.txt
src/mujoco_ros2_control/mujoco_ros2_control_demos/launch/: camera_example.launch.py
src/mujoco_ros2_control/src/: mujoco_cameras.cpp
src/openarm_commander_py/: package.xml  setup.cfg  setup.py
src/openarm_control/: package.xml  setup.cfg  setup.py
src/openarm_control/openarm_control/: arm_controller.py  openarm_node.py  send_joint_goal.py
src/openarm_description/launch/: display_openarm.launch.py
src/openarm_description/urdf/robot/: v10-D435.urdf.xacro
src/openarm_description_team/: package.xml  setup.py
src/openarm_description_team/urdf/: apple.urdf  banana.urdf  camera_d435.xacro  table.urdf
src/openarm_description_team/urdf/Red Apple model - 5260915/: LICENSE.txt  README.txt
src/openarm_description_team/urdf/Red Apple model - 5260915/files/: apple_v4_1.stl
src/openarm_moveit_config/: .setup_assistant
src/openarm_moveit_config/config/: moveit_controllers.yaml  openarm.srdf  openarm.urdf.xacro  openarm_bimanual_cam.urdf  ros2_controllers.yaml
src/openarm_moveit_config/launch/: mujoco_demo.launch.py  test.launch.py
src/openarm_moveit_config/models/011_banana/: banana.urdf.xacro
src/openarm_mujoco/v0/: openarm_bimanual_cam_v2.xml  scene.xml
src/openarm_mujoco/v1/: openarm_bimanual.xml  scene.xml  work_openarm_bimanual.xml
src/simulation_launch/: package.xml  setup.py
visual_detection/: package.xml  setup.cfg  setup.py
